--- a/index.html
+++ b/index.html
@@ -1,60 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en-us">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="asssets/css/style.css">
-    <title>About me</title>
+  <meta charset="UTF-8">
+  <title>About | Your Name</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
-
 
 <body>
 
+  <header id="masthead">
     <div class="container">
+      <a href="index.html" id="logo">Your Name</a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
 
-        <div class="topnav">
-            Daniel Masters
-            <a class="right" href="#">About   |</a>
-            <a class="right" href="#">Portfolio   |</a>
-            <a class="right" href="#">Contact   |</a>
-        </div>
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>About Me</h1>
 
+      <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
 
-        <div class="aboutme">
-            <h1>About me</h1>
-            <hr>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin commodo purus vitae sollicitudin consectetur.</p>
 
+      <p>Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium odio. Nunc id eros iaculis, pulvinar quam eget, egestas mauris.</p>
 
-            <img src="asssets/images/profile.jpg" class="profile">
+      <p>Suspendisse dictum, arcu at convallis faucibus, quam sapien tincidunt nunc, sit amet egestas nibh tortor et mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
 
+    </section>
 
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic perspiciatis, cumque, reprehenderit
-                voluptatem laborum, a aspernatur excepturi voluptatum ratione tenetur minus laboriosam fugit. Deleniti
-                obcaecati odio odit voluptatem accusantium aliquid?
+  </div>
 
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, aspernatur facilis facere eaque ad
-                similique nostrum reiciendis debitis aliquid magni molestias animi voluptas tempora aliquam incidunt,
-                laborum ipsum, suscipit ex.
-
-            </p>
-
-
-
-        </div>
-
-        <hr>
-
-        <footer>Copyright 2019 Daniel Masters</footer>
-
-
-    </div><!--/container-->
-
-    
+  <footer>
+    <div class="container">
+      Copyright &copy; 
+    </div>
+  </footer>
 </body>
 
 </html>
